src/test/deca/context/invalid/created/sans_objet/operateur_arith_1.deca
// Description:
//    Programme minimaliste utilisant operateur arith.
//
// Resultats:
//   error : int + float = float
//
// Historique:
//    cree le 13/01/2024

{
        int a = 2;
        float b = 1;
        int x= a + b ;
}